# DeepSC

./: .env.example  .gitignore  .pre-commit-config.yaml  ATTENTION_DEBUG_ANALYSIS.md  ATTENTION_SOLUTION.md  BUG_REPORT.md  CONSTANT_LR_FEATURE_SUMMARY.md  CONTRIBUTING.md  FINAL_STATUS.md  Makefile  Makefile.txt  README.md  REFACTORING.md  REFACTORING_PLAN.md  SUCCESS_REPORT.md  analyze_expression_distribution.py  check_normalization_scfoundation.py  check_training_status.sh  data  debug_attention_issue.py  grn_test.ipynb  inspect_checkpoint.py  pert_dataset_test.py  pyproject.toml  pytest.ini  requirements.txt  results  run_perturbation_simple.py  setup.cfg  temp_test_package.py  test_dataloader.py  test_minimal_run.py  test_model_load_perturbation.py  test_output_dir.py  test_perturbation_import.py  test_pp_dataloader.py
baselines/: scBERT  scFoundation  scGPT
baselines/scBERT/: .gitignore  finetune_annotation.py  generate_label.py  merge_datasets.py  predict.py  predict_with_metrics.py  run_finetune.sh  run_four_experiments.sh  run_predict.sh
baselines/scFoundation/: .gitignore  Zheng68K_训练指南.md
baselines/scGPT/: inspect_h5ad.py  requirements.txt  scGPT_Model_Architecture.md
configs/cta/: finetune.yaml
configs/finetune/: README.md  finetune.yaml
configs/grn/: grn.yaml
configs/pp/: pp.yaml
configs/pretrain/: pretrain.yaml  pretrain_original_delete_when_everything_ok.yaml
data/: 3ac  3ca  cellxgene  integrated_preprocess.py  run_preprocessing.sh
docs/: Terminologies.md  data_processing_comparison.md  grad_check_usage.md  lr_scheduler_usage_guide.md  test_normalization.md
docs_to_review/: 2_relatedwork.md  GEARS_scFoundation_report.md
examples/: grad_check_example.py  grad_check_in_training.py  reference_mapping.py  run_filter_dataset.sh  run_perturbation_finetune.py
examples/preprocessing/: 02_preprocess_3ca_run_map_3ca.sh  03_preprocess_3ca_run_merge_3ca.sh
glossary/: modelling.md  terminology.md
models/: README.md
models/deepsc/: approved_name_vocab.json  feature_name_vocab.json
notebooks/: data_exploratory_analysis.ipynb
scripts/: README.md  generate_umap.py  inspect_h5ad.py  md_to_pdf.py  md_to_pdf_fixed.py  plot_checkpoint_accuracy.py  run_reference_mapping.sh  run_reference_mapping_all_checkpoints.sh  test_attention_stream_checkpoints.sh
scripts/debug/: gradient_flow_analysis.py
scripts/download/: 02_download_cxg_run_download_partition_cellxgene.sh
scripts/finetune/: README.md  run_all_cta_hPancreas_experiments.sh  run_cta.sh  run_cta_hPancreas.sh  run_cta_test.sh  run_cta_zheng.sh  run_finetune.sh  run_grn.sh  run_hp_test.sh  run_perturbation.sh  run_perturbation_prediction.sh  run_pp.sh  run_pp_newmodel.sh  run_pp_small_train.sh
scripts/models/: instantiate_deepsc.py  run_deepsc.sh  run_deepsc_one.sh  run_scbert.sh
scripts/normalization/: 3ca_high_expressed_gene_names.py  check_hgnc_previous_sym.py  cxg_clean.py  cxg_high_expressed_gene_selection.py  cxg_high_expressed_gene_selection.sh  cxg_merge.py  hgnc_merge_pipeline.py  process_2dic.py
scripts/preprocessing/: 01_preprocess_run_preprocess_gene_name.sh  02_preprocess_3ca_run_map_3ca.sh  03_preprocess_3ca_run_merge_3ca.sh  04_batch_normalize.sh  config.py  gene_name_normalization.py  gene_name_preprocess.py  preprocess_datasets_3ca.py  preprocess_datasets_cellxgene.py
scripts/pretrain/: README.md  run_deepsc.sh  run_deepsc_hpc.sh  run_deepsc_hpc_experiment.sh
scripts/test/: analyze_percentiles.py  compare_csr_distributions.py  compare_normalizations.py  quick_verify_tp10k.py  run_test_dataloader.sh  validate_normalization.py  verify_old_norm.py
scripts/utils/: utils.py
src/: README.md
src/deepsc/: __init__.py  data_collator.py  preprocess.py  run_finetune_perturbation_v2.sh  test.py
src/scBERT/: .gitignore  attn_sum_save.py  finetune.py  lr_baseline_crossorgan.py  predict.py  preprocess.py  preprocess_tensor.py  pretrain.py  pretrain.sh  requirements.txt  (+1 more)
tests/: README.md  README_test_moe_regressor.md  conftest.py  test_build_vocab_from_csv.py  test_dataset.py  test_expr_emb.py  test_flash_attention.py  test_gene_name_normalization.py  test_moe_regressor.py  test_notebook.ipynb  test_tp10k_normalization.py  test_utils.py  test_wandb_resume_simple.py
(+213 files in other folders)
