[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsc"
version = "0.1.0"
description = "DeepSC: Deep Foundation Models for Single Cell RNA Sequencing"
authors = [
    { name = "Mou YongLi", email = "mou@dbis.rwth-aachen.de" },
    { name = "Ang Li" },
    { name = "Er Jin" },
    { name = "Sikander Hayat" },
    { name = "Johannes Stegmaier" },
    { name = "Stefan Decker" }
]
license = { text = "MIT" }
readme = "README.md"  # Optional
requires-python = ">=3.10"
urls = { "Homepage" = "https://github.com/MouYongli/DeepSC" }
classifiers = [
    "Development Status :: 1 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "cellxgene-census==1.17.0",
    "dask==2025.7.0",
    "bs4==0.0.2",
    "wandb==0.21.1"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["deepsc"]
